--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="grid-item">9</div>
       <div class="grid-item">10</div>
       <div class="grid-item">11</div>
-      <div class="grid-item big-item">12</div>
+      <div class="grid-item">12</div>
+      <div class="big-item">12</div>
     </div>
   </body>
 </html>
